Fix required changes for border spacing

--- a/style.css
+++ b/style.css
@@ -1,14 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Poppins:wght@300&family=Roboto:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&family=Poppins:wght@300;400&family=Roboto:wght@300;400&display=swap');
 
-*,
-::before,
-::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
 html {
   box-sizing: border-box;
   margin: 0;
@@ -28,6 +20,8 @@ html {
   display: flex;
   justify-content: space-between;
   background: #3c3a39;
+  top: 0;
+  left: -2px;
 }
 
 .heading-text {
@@ -61,8 +55,8 @@ html {
   position: absolute;
   width: 375px;
   height: 595px;
-  left: 10px;
-  top: 100px;
+  left: 0;
+  top: 92px;
 }
 
 .main-text {
